[project]
name = "PyNomadBBO"
version = "4.5.0"
authors = [
  { name = "Jan Provaznik and Christophe Tribes", email="christophe.tribes@polymtl.ca"},
]
maintainers = [
  { name = "Christophe Tribes", email="christophe.tribes@polymtl.ca"},
]
description = "Python interface to Nomad 4"
readme = { file = "long_description.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://nomad-4-user-guide.readthedocs.io/"
Repository = "https://github.com/bbopt/nomad.git"
Issues = "https://github.com/bbopt/nomad/issues"

[build-system]
requires = [
  'setuptools',
  'cython',
  'wheel'
]

[tool.setuptools]
py-modules = []
